# pager2

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile.md  README.md
src/: helper.rs  lib.rs  utils.rs
t/: README.md
tests/: pager.rs
