[package]
name = "pager2"
version = "0.1.1"
authors = ["qtfkwk <qtfkwk+pager2@gmail.com>"]
description = "Helps pipe your output through an external pager"
documentation = "https://docs.rs/pager2"
keywords = ["pager", "less", "more"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/qtfkwk/pager2.git"
edition = "2018"
categories = ["command-line-interface", "text-processing"]

[dependencies]
errno = "0.3"
libc = "0.2"

[features]
pedantic = []
