[package]
name = "pager2"
version = "0.4.1"
authors = ["qtfkwk <qtfkwk+pager2@gmail.com>"]
description = "Helps pipe your output through an external pager"
keywords = ["pager", "less", "more"]
license = "Apache-2.0/MIT"
readme = "README.md"
repository = "https://github.com/qtfkwk/pager2.git"
edition = "2024"
categories = ["command-line-interface", "text-processing"]

[dependencies]
errno = "0.3"
libc = "0.2"

[features]
pedantic = []

[dev-dependencies]
clap = { version = "4.5.45", features = ["derive"] }
which = "8.0.0"
